--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6f918716",
+   "id": "1775686d",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31caa587",
+   "id": "64c4eb15",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0ba319",
+   "id": "e27210dd",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7a55fcb",
+   "id": "415330d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0440f4a8",
+   "id": "97794ea3",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b617d1f3",
+   "id": "d4444c99",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fc823159",
+   "id": "b68c68e1",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "857ed97c",
+   "id": "d4ac1c54",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0be3a45",
+   "id": "3a86eafa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3f311117",
+   "id": "12438c73",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d852fddc",
+   "id": "c310676a",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "844f883d",
+   "id": "886123b7",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e49d8cf4",
+   "id": "df6f0bbf",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "eb028d24",
+   "id": "51e3fbef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e9857f42",
+   "id": "139c28f9",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "37bc62f9",
+   "id": "e2b01631",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22cc453d",
+   "id": "95f64446",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a6175ec8",
+   "id": "58d5ecae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d438040d",
+   "id": "b05d6484",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "77d099c5",
+   "id": "27f75f11",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "67bab53a",
+   "id": "303663e4",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3930ac00",
+   "id": "14d2a621",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c733eb6c",
+   "id": "c794623c",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f6152432",
+   "id": "691d0e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2cf6f6c1",
+   "id": "78ce8bc2",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "61a6fd92",
+   "id": "809c3636",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "f5398e40",
+   "id": "7c6c3456",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c5a853",
+   "id": "c7bd0d05",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50255fd5",
+   "id": "60a313e2",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "0ab2af8e",
+   "id": "49fe6519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f8c5585d",
+   "id": "53f3b86a",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c0f74f60",
+   "id": "6465eb0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f672a20a",
+   "id": "46c521c6",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09de793d",
+   "id": "c45de959",
    "metadata": {},
    "source": [
     "# What might we return from a function?\n",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a60e6f7",
+   "id": "54cecad7",
    "metadata": {},
    "source": [
     "# Exercise: Biggest and smallest\n",
@@ -722,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b9b128da",
+   "id": "147a85c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5fe713d1",
+   "id": "7fef3466",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "10508a00",
+   "id": "c1047e62",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "105f91e1",
+   "id": "2a6c2094",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "67cc1e85",
+   "id": "d06b53ac",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6fcb6df4",
+   "id": "f1d9ee0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "908887ae",
+   "id": "98066883",
    "metadata": {},
    "source": [
     "# Types of arguments in Python\n",
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2d2ca4bf",
+   "id": "cb3d1c05",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b58cef98",
+   "id": "cad217b9",
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "243243fa",
+   "id": "81839916",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e14722be",
+   "id": "e8446d06",
    "metadata": {},
    "source": [
     "# Exercise: Name and age\n",
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "c4523b11",
+   "id": "faf13c1d",
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b249cae2",
+   "id": "8e33cc35",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "98b8032b",
+   "id": "0a187baa",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "d2275e15",
+   "id": "ea3b1cfe",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c2143d8",
+   "id": "f1ad80f6",
    "metadata": {},
    "source": [
     "# Optional arguments\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c13bdf8c",
+   "id": "71168bca",
    "metadata": {},
    "outputs": [
     {
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "67e8c206",
+   "id": "77f4df51",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "660845aa",
+   "id": "1690ff0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d6bcbdd3",
+   "id": "730b2ecb",
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1132,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0ccefb81",
+   "id": "e010b5e9",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8a77425a",
+   "id": "f1da8567",
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d99d26c",
+   "id": "50793b65",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "319b6a31",
+   "id": "cc4353ea",
    "metadata": {},
    "source": [
     "# f-strings (\"format strings\" or \"fancy strings\")\n",
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ac2b3c17",
+   "id": "5659700b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f0dcfbc5",
+   "id": "02a38e56",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "8fad770a",
+   "id": "cd637d55",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8017485a",
+   "id": "de5292b1",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4f883d",
+   "id": "4a950361",
    "metadata": {},
    "source": [
     "# Argument typing"
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "8745d091",
+   "id": "48d34caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "6005c86f",
+   "id": "944a062c",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "08860337",
+   "id": "04c8a1a9",
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "39c11487",
+   "id": "2eecfed0",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "2dc156a9",
+   "id": "99997dcb",
    "metadata": {},
    "outputs": [
     {
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c99c8deb",
+   "id": "f39a1620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "476e2b0b",
+   "id": "580eab7b",
    "metadata": {},
    "outputs": [
     {
@@ -1460,7 +1460,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "38e8747a",
+   "id": "f06518c1",
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eea5e4b",
+   "id": "16a41535",
    "metadata": {},
    "source": [
     "# Exercise: Vowel count\n",
@@ -1500,7 +1500,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "085e7c7e",
+   "id": "df164b26",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74ffc0c",
+   "id": "7cb10ea1",
    "metadata": {},
    "source": [
     "# Complex return values\n",
@@ -1550,8 +1550,22 @@
     "- lists and tuples\n",
     "- dicts\n",
     "\n",
-    "If we want to return different types to the caller, then we can return a tuple. Better yet, it consumes very little memory. Even better than that is \n",
+    "If we want to return different types to the caller, then we can return a tuple. Better yet, it consumes very little memory. Even better than that is the fact that we can take advantage of tuple unpacking.\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21baeef3",
+   "metadata": {},
+   "source": [
+    "# Exercise: Filter vowels\n",
+    "\n",
+    "1. Write a function, `filter_vowels`, which takes a string (not a filename) and goes through the string, one character at a time.\n",
+    "2. Define `vowels`, a dictionary whose keys are vowels.\n",
+    "3. Go through the string, one character at a time:\n",
+    "    - If the character is a vowel, increment its count in "
    ]
   }
  ],
